# foodScrapper-pyPlay

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.json  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  users.csv
.github/: pull_request_template.md
.github/workflows/: auto-pr.yml
data/: locations.csv
scrapers/: __init__.py  baseScraper.py
scrapers/foodi/: v1Scraper.py
scrapers/foodpanda/: __init__.py  v1Scraper.py
utils/: config.py  helpers.py  logger.py  validators.py
